# social-network-bottleneck-detector

./: .env.example  .gitignore  DEPLOY.md  IMPROVEMENTS.md  README.md  docker-compose.yml  init_db.py  run_algorithms.py
.claude/: settings.local.json
backend/: .env.example  Dockerfile  pyproject.toml  railway.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/v1/: __init__.py  algorithms.py  bottlenecks.py  communities.py  graph.py  nlq.py  users.py
backend/app/models/: __init__.py  community.py  tweet.py  user.py
backend/app/schemas/: __init__.py  responses.py
backend/app/services/: __init__.py  cache_service.py  neo4j_service.py  nlq_service.py
backend/tests/: test_api.py  test_services.py
data/: process_twitter.py  process_twitter_fast.py  schema.cypher
data/processed/: edges.csv  users.csv
docs/: API.md  ARCHITECTURE.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json
frontend/src/: App.tsx  index.css
frontend/src/components/: BottleneckCard.tsx  GraphControls.tsx  Layout.tsx  MetricCard.tsx  NaturalLanguageInput.tsx  NetworkGraph.tsx  NodeDetails.tsx
frontend/src/pages/: Bottlenecks.tsx  Dashboard.tsx  Explorer.tsx  Query.tsx
frontend/src/services/: api.ts
frontend/src/store/: useStore.ts
frontend/src/types/: index.ts
scripts/: import_data.py  import_twitter_data.py
